fix focus loss on mazimize with BorderlessMaximizedWindows=true

BUG: 411884